--- a/index.html
+++ b/index.html
@@ -202,27 +202,27 @@ const CARD_DATA = {
 <div class="wrapper">
   <div class="card" data-priority="high" data-card="card1" onclick="openById(this)">
     <div class="img-box"><img src="img/img1.jpg"></div>
-    <div class="content"><div class="site">B WIN</div><div class="desc">고액전용 USDT 무기명가입</div><div class="code">AS88</div></div>
+    <div class="content"><div class="site">B WIN</div><div class="desc"> </div><div class="code">*고액전용* USDT 무기명가입&수수료지원</div></div>
   </div>
   <div class="card" data-priority="high" data-card="card2" onclick="openById(this)">
     <div class="img-box"><img src="img/img2.jpg"></div>
-    <div class="content"><div class="site">CAPS</div><div class="desc">미겜 첫충 / 페이백</div><div class="code">RUST</div></div>
+    <div class="content"><div class="site">CAPS</div><div class="desc"> </div><div class="code">*고액전용*미겜 첫충: 5%, 페이백 5%, 출석 30만원</div></div>
   </div>
   <div class="card" data-priority="high" data-card="card3" onclick="openById(this)">
     <div class="img-box"><img src="img/img3.jpg"></div>
-    <div class="content"><div class="site">BETZY</div><div class="desc">스포츠·미겜 고액</div><div class="code">BANGU</div></div>
+    <div class="content"><div class="site">BETZY</div><div class="desc"> </div><div class="code">*고액전용*스포츠 첫:10% 미겜 첫:5%, 페이백 5%, 출석 30만원</div></div>
   </div>
   <div class="card" data-priority="normal" data-card="card4" onclick="openById(this)">
     <div class="img-box"><img src="img/img4.jpg"></div>
-    <div class="content"><div class="site">VEGAS</div><div class="desc">입플 최대 30%</div><div class="code">6789</div></div>
+    <div class="content"><div class="site">VEGAS</div><div class="desc"> </div><div class="code">스포츠,미니게임,슬롯,카지노 입금플러스</div></div>
   </div>
   <div class="card" data-priority="normal" data-card="card5" onclick="openById(this)">
     <div class="img-box"><img src="img/img5.jpg"></div>
-    <div class="content"><div class="site">LULA BET</div><div class="desc">무기명가입 페이백</div><div class="code">ZZ99</div></div>
+    <div class="content"><div class="site">LULA BET</div><div class="desc"> </div><div class="code">*고액전용*원화 USDT 무기명가입 페이백10%</div></div>
   </div>
   <div class="card" data-priority="normal" data-card="card6" onclick="openById(this)">
     <div class="img-box"><img src="img/img6.jpg"></div>
-    <div class="content"><div class="site">CHOY BET</div><div class="desc">신규·매충·페이백</div><div class="code">TAN</div></div>
+    <div class="content"><div class="site">CHOY BET</div><div class="desc"> </div><div class="code">*고액전용*신규첫 30%,매충10%, 페이백10%</div></div>
   </div>
 </div>
 
@@ -289,3 +289,4 @@ function copyCode(){ if(currentCode) navigator.clipboard.writeText(currentCode);
 
 </body>
 </html>
+
